--- a/promo-codes-react-spa/public/index.html
+++ b/promo-codes-react-spa/public/index.html
@@ -25,10 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="lib/bootstrap-4.0.0-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="lib/bootstrap-4.0.0-dist/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="lib/theme/css/bootstrap.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +43,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="lib/bootstrap-4.0.0-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
+    <script src="lib/jquery/jquery-3.6.0.min.js"></script>
   </body>
 </html>
